# circuit-muse

./: .dockerignore  .gitignore  .gitmodules  BUILDING.md  CONTRIBUTING.md  LICENSE  README.md  build_qemu_all.sh  build_qemu_step4.sh  docker-compose.yml  make-test.js
.github/workflows/: actions-cache-cleanup.yml  backend-unit-tests.yml  ci.yml  library-compile.yml  release.yml  test-circuit.yml
app/: .env.desktop  .prettierignore  README.md  eslint.config.js  index.html  package.json  vite.config.ts  vitest.config.ts
app/public/: components-metadata.json  manifest.webmanifest
app/scripts/: copy-monaco.mjs  translate-i18n.mjs
app/src/: App.tsx  entry-server.tsx  index.css  main.tsx  seoRoutes.ts  vite-env.d.ts
backend/: .env.example
backend/app/: main.py
backend/scripts/: backfill_boards_2026_05.py
docker/: entrypoint.sh  nginx.conf
docs/: BUILD-QEMU.md  CUSTOM_CHIPS.md  ESP32C3_WIFI_BLUETOOTH.md  ESP32_EMULATION.md  ESP32_WIFI_BLUETOOTH.md  PICO_W_WIFI_EMULATION.md  RISCV_EMULATION.md  RP2040_EMULATION.md  THIRD_PARTY.md
engine/: __main__.py  circuit-muse-engine.spec  mcp_server.py  mcp_sse_server.py  requirements.txt
engine/app/: main.py
frontend/: .gitignore  Dockerfile  README.md  package.json  vite.config.ts
scripts/: build-engine.sh  circuit-muse.sh  download-deps.sh  generate-component-svgs.cjs  killbits-rom.s  larson-z80.s  test-z80.s
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: debug.rs  mod.rs  qemu.rs  serial.rs
test/: docker-errors-2026-04-19.md
(+1245 files in other folders)
