[package]
name = "circuit-muse"
version = "1.0.1"
edition = "2021"

[lib]
name = "circuit_muse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4"
reqwest = { version = "0.12", features = ["blocking"] }
tokio = { version = "1", features = ["rt", "macros"] }
